--- a/manuscript/manuscript.tex
+++ b/manuscript/manuscript.tex
@@ -95,14 +95,14 @@ A potential alternative to active monitoring is passive monitoring \citep[e.g., 
 
 Our utilization of flux tower records for event discrimination stands in contrast to the typical use of data from the towers for direct carbon balance accounting. Whereas carbon balance accounting activities deal directly in the units of the measured data for computing quantities like net ecosystem exchange \citep{baldocchiInterannualVariabilityNet2018}, our use treats each variable as potentially including an indirect signal (i.e. an anomaly from normal vegetation behavior) of radioactive material deposition irrespective of its physical properties (e.g., mass, volume, etc). In this way, we are not directly measuring radioactive deposition but rather leveraging the fact that existing ecosystem monitoring records reflect vegetation photosynthesis rates and general stress condition of site vegetation in a known way \citep{nobelPhysicochemicalEnvironmentalPlant2020}.
 
-We specifically focused on short-term responses of vegetation (on the order of days to weeks) to potential deposition of radioactive material rather than chronic long-term signals (on the order of years to decades). In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other nearby eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
+We specifically focused on short-term anomalies in the vegetation response data (on the order of days to weeks) due to either potential deposition of radioactive material or direct sensor effects rather than chronic long-term signals on the order of years to decades. In the first case study, we tested the ability of various data mining techniques to recover the signal from the closest tower (approximately 18 km away) to a known release coming from the Institut des Radioelements (IRE) in Belgium (hereafter called the known release location or the “facility”) nominally occurring on August 23, 2008. The IRE release originated from waste tanks into the atmosphere and lasted for several days totaling 50 GBq 131I \citep{carle2010individual}. For example, grass samples collected in the vicinity of the facility found radioactivity levels of 5000 Bq/kg. In the second case study, we further explored potential signals in flux tower data related to the Fukushima Nuclear Disaster nominally occurring on March 11, 2011 releasing a massive radioactive plume that reached North America in 5 days that eventually dispersed throughout the entire northern hemisphere \citep{meszarosPredictabilityDispersionFukushimaderived2016}. We used the signal identified during the known release to identify additional potential abnormal releases occurring at other times in the data record and at other eddy flux towers. While the body of literature on direct or indirect effects of radioactive material on vegetation is limited, we expect that exposure may cause declines in photosynthetic $CO_2$ uptake. This may be expressed as a change in the slope of the $CO_2$ relationship with other environmental variables (e.g. air temperature, humidity, precipitation, etc.) before, during, and after exposure.
 
 
 \section{Methods}
 
 \subsection{Data Description}
 
-For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1A). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie respectively.
+For the IRE case study, we gathered measurements from eddy covariance platforms (i.e., “flux towers”) located in Belgium, which are part of the ICOS (Integrated Carbon Observation System) network available through the European Fluxes Database (http://www.europe-fluxdata.eu/). Three sites in proximity to the known release location had sufficient long-term data for our anticipated data mining efforts (BE-Lon, BE-Bra, and BE-Vie sites, Figure 1A). Each of the three flux tower sites are located within a crop ecosystem type and had almost 10 years of data available from 2004 through 2013 recorded at 30 min intervals. While BE-Lon had a near-continuous data record during this period, BE-Bra had a long period of missing data in 2005, and both BE-Bra and BE-Vie had a long period of missing data in 2009. The distance between IRE and the flux tower sites are approximately 19 km, 95 km, and 105 km for the BE-Lon, BE-Bra, and BE-Vie, respectively.
 
 For the Fukushima case study, due to the direction of the plume, we gathered measurements from flux towers located in the Northern Hemisphere (Western United States), which are part of the Ameriflux network (https://ameriflux.lbl.gov/). To increase confidence that we are seeing a real effect, we contrasted the results from Northern Hemisphere sites, where we expect a higher likelihood of impact, to measurements from flux towers located in the Southern Hemisphere, which are part of the OzFlux network \citep{cleverly2011alice}. We selected sites with sufficient long-term data to cover the 2011 date of the disaster and excluded boreal sites with extreme snow cover related seasonality. We ultimately selected three sites (US-Wrc, US-GLE, and OZ-Mul, Figure 1B).
 
@@ -113,9 +113,9 @@ To begin our analysis, we screened all pairwise, linear relationships between th
 
 \[ Y = \beta_0 + \beta_1X_1 + \beta_2W_2 + \beta_3X_1W_2 \]
 
-This interaction model is fit for a window of time encompassing the known release event and for every other possible window in the period-of-record. The overall length of the window was treated as an adjustable hyperparameter since the length of time for an abnormal material release to reach the footprint of the flux tower may be event-dependent and/or unknown. In addition, the length of time for deposited material to induce a possible vegetation response (or at least a flux tower anomaly) is an unknown quantity. Thus, in the default base case, we set the window length (n\_days) as 7 days, but we ran hyperparameter experiments to determine the result of setting it to longer periods of 10 and 14 days. The window length affects the duration of time designated as before and after the event. The period of time designated as during the event was set as 2 days in all cases. We compared the effect size of the interaction term ($\beta$3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event against a window centered on every other observation. Specific windows that had an effect size at least as large as that of the known event and with wind conditions defined as “towards” the flux tower were flagged as “event detections”.
+This interaction model was fit for a window of time encompassing the known release event and for every other possible window in the period-of-record. The overall length of the window was treated as an adjustable hyperparameter since the length of time for an abnormal material release to reach the footprint of the flux tower may be event-dependent and/or unknown. In addition, the length of time for deposited material to induce a possible vegetation response (or at least a flux data anomaly) is an unknown quantity. Thus, in the default base case, we set the window length (n\_days) as 7 days, but we ran hyperparameter experiments to determine the result of setting it to longer periods of 10 and 14 days. The window length affects the duration of time designated as before and after the event. The period of time designated as during the event was set as 2 days in all cases. We compared the effect size of the interaction term ($\beta$3) during the event-encompassing window against all other windows in a “rolling” analysis. Therefore, the overall analysis compares the interaction term of the window of the known event against a window centered on every other observation. Specific windows that had an effect size at least as large as that of the known event and with wind conditions defined as “towards” the flux tower were flagged as “event detections”.
 
-In order to flag event detections, we defined several adjustable hyperparameters to deal with uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, wind\_tolerance, reflects the range around the bearing from the facility to the tower location which counts as towards the tower. In the base default case, we set wind\_tolerance to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, event\_quantile\_effect, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of event\_quantile\_effect is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], and we refer readers to the original providers for data access.
+In order to flag event detections, we defined several adjustable hyperparameters to account for uncertainty surrounding atmospheric transport and the timing of any possible responses to material deposition. The first hyperparameter we defined, wind\_tolerance, reflects the range around the bearing from the facility to the tower location which counts as towards the tower. In the base default case, we set wind\_tolerance to 10 degrees, but we explored setting it to smaller values down to 5 degrees and larger values up to 20 degrees. The second hyperparameter we defined, event\_quantile\_effect, handles the unknown travel time of any materials to be deposited via an abnormal release or what, if any, delays exist between deposition and vegetation response. Rather than simply selecting the maximum value of $\beta$3 during a given window or the value at the exact time of the event, the value of event\_quantile\_effect is set to correspond with a specific quantile of all $\beta$3 values during the event window. In the base default case, this was set at 0.9, but we explored values as low as 0.5. All statistical analyses were carried out using the statsmodels Python package (Seabold and Perktold, 2009). Our processing scripts are openly available at [doi link], and we refer readers to the original providers for data access.
 
 \begin{figure}
 	\centering
@@ -126,11 +126,11 @@ In order to flag event detections, we defined several adjustable hyperparameters
 
 \section{Results}
 
-For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. 
+For the IRE case study, among all possible pairwise combinations of dependent and independent variables (n=51, Table S1), we found that only the $CO_2$ versus air temperature comparison had any measure of predictability from the model ($R^2$ > 0.05) and a strong event effect size (Table 1). Although other variable pairs such as sensible heat flux and net radiation had a stronger effect size for the BE-Lon site, they had a weak linear relationship across the other sites. When we focus on the period of the abnormal release event in particular rather than the overall period of record, we found that $CO_2$ versus air temperature relationship at each of the three focal towers had similar $R^2$ values and effect sizes (Table 1). Figure 2 provides a visual example of the effect size framing in our analysis. Note how the apparent interaction effect between time periods around the abnormal release event in Figure 2A (before, during, after) translates to a relatively high effect size (Figure 2C) whereas in Figure 2B at an arbitrary time point, there is no apparent interaction effect. This corresponds to a low effect size in Figure 2D. Note also how during and after the known abnormal release, the slopes of the relationships between CO2 and air temperature become less negative than before the event, with lower than expected CO2 at low air temperature (Figure 2A).
 
 Despite the similar effect size at the three tower sites during the abnormal release event, they differed substantially in the degree to which they uniquely flagged the known release event. At the BE-Lon and BE-Vie sites, our event detection algorithm identified the known release and only a few other time periods as potential abnormal releases (Figure 3). Conversely, at the northerly BE-Bra site, the algorithm was not able to identify the known release event distinct from background noise. This can be seen in the rate of event detections ($\alpha$) at each site, whereby it was less than 1\% at the BE-Lon and BE-Vie sites, but was greater than 2\% at the BE-Bra site. It is notable that this ability to uniquely detect the known release along with a plausible number of additional event detections corresponds with the fraction of the abnormal release period when the wind was pointed from the release location towards the respective tower (using the default base case wind tolerance of 10 deg) which was much lower at the BE-Bra site (5\%) compared to the BE-Lon and BE-Vie sites (34\% Table 1). 
 
-To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter would hypothetically increase event detection rates, we do not see value in setting this parameter below the median. Likewise, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not see value in setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts \citep[e.g.][]{meszarosPredictabilityDispersionFukushimaderived2016}.
+To increase our confidence that event detections were not dependent on the specific hyperparameters settings in our base-case setup, we ran an exhaustive cross-validation set of hyperparameter experiments. For this effort, we tested every possible combination of values for wind tolerance, number of days, and the event quantile effect. Across reasonable values of specific hyperparameters, we found that their magnitudes had little effect on the rate at which events were flagged as potential abnormal releases as even in the most extreme cases, we did not see detection rates exceeding 1\%. We did, however, observe that the event detection was related to the window length and event quantile parameters as shown by the slope of the line in Figure 4. Although increasing values of the event quantile parameter would hypothetically increase event detection rates, we do not see value in setting this parameter below the median. Similarly, increasing the magnitude of the window length parameter would also likely increase the event detection rate but here too we do not see value in setting this parameter beyond 14 days given the results of prior atmospheric modeling efforts \citep[e.g.][]{meszarosPredictabilityDispersionFukushimaderived2016}.
 
 For the Fukushima case study, our objective was to test the sensitivity of our approach to a broad scale abnormal release and to introduce a control design to verify behavior on a flux tower where we expect no impact from any abnormal releases. First, we verified that event detection specificity is present at towers likely to be exposed even across long distances if the abnormal release is large (Figure 5). Then, we found a decrease in event detection specificity and an increase in event detection rate moving from the flux tower expected to be most affected (US-Wrc), to a more distant (likely less affected) tower (US-Gle), to a tower likely not exposed at all to the atmospheric plume (OZ-Mul, Figure 5).
 
